отказ от API, переход к слайсам там где нужно
